using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Harvesting
{
    public static class AnimationDefaultNames
    {
        /// <summary>
        /// Player Idle.
        /// </summary>
        public const string PlayerIdle1 = "Idle";

        /// <summary>
        /// Player running.
        /// </summary>
        public const string PlayerRunning = "Run";

        /// <summary>
        /// Player upward slash.
        /// </summary>
        public const string PlayerAttack1 = "Attack1";

        /// <summary>
        /// Player downward slash.
        /// </summary>
        public const string PlayerAttack2 = "Attack2";

        /// <summary>
        /// Player raise sword and slam ground cast.
        /// </summary>
        public const string PlayerCast1 = "Cast1";

        /// <summary>
        /// Player shout cast animation.
        /// </summary>
        public const string PlayerCast2 = "Cast2";

        /// <summary>
        /// Player Blocking to Idle.
        /// </summary>
        public const string PlayerBlock1 = "Block1";

        /// <summary>
        /// Player Idle to Blocking.
        /// </summary>
        public const string PlayerBlock2 = "Block2";

        /// <summary>
        /// Player Blocking stance.
        /// </summary>
        public const string PlayerBlocking = "Blocking";

        /// <summary>
        /// Player body recoil when hit.
        /// </summary>
        public const string PlayerHit1 = "Hit1";

        /// <summary>
        /// Player head recoil when hit.
        /// </summary>
        public const string PlayerHit2 = "Hit2";

        /// <summary>
        /// Player hit while blocking.
        /// </summary>
        public const string PlayerHit3 = "Hit3";

        /// <summary>
        /// Player death animation.
        /// </summary>
        public const string PlayerDeath = "Death";
    }
}